--- a/app.css
+++ b/app.css
@@ -1,8 +1,9 @@
 svg .node {
-  stroke: #000;
+  stroke: black;
   stroke-width: 1.5px; }
 svg .link {
-  stroke: #999;
-  stroke-width: 1.5px; }
+  stroke: black;
+  stroke-width: 1.5px;
+  fill: none; }
 
 /*# sourceMappingURL=app.css.map */
