--- a/app.scss
+++ b/app.scss
@@ -1,11 +1,12 @@
 svg {
   .node {
-    stroke: #000;
+    stroke: black;
     stroke-width: 1.5px;
   }
 
   .link {
-    stroke: #999;
+    stroke: black;
     stroke-width: 1.5px;
+    fill: none;
   }
 }
