--- a/app.css
+++ b/app.css
@@ -6,4 +6,30 @@ svg .link {
   stroke-width: 1.5px;
   fill: none; }
 
+.mdl-layout__header-row {
+  padding-left: 16px;
+}
+
+.mdl-button--floating-action {
+  position: absolute;
+  right: 24px;
+  bottom: 24px;
+  padding-top: 24px;
+  margin-bottom: 0;
+  z-index: 998;
+}
+
+.page-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+
+.page-content div, .page-content d3-bar, .page-content d3-boxplot, .page-content d3-force {
+  max-width: 450px;
+}
+
 /*# sourceMappingURL=app.css.map */
