--- a/app.scss
+++ b/app.scss
@@ -10,3 +10,28 @@ svg {
     fill: none;
   }
 }
+
+.mdl-layout__header-row {
+  padding-left: 16px;
+}
+
+.mdl-button--floating-action {
+  position: absolute;
+  right: 24px;
+  bottom: 24px;
+  padding-top: 24px;
+  margin-bottom: 0;
+  z-index: 998;
+}
+
+.page-content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  div, d3-bar, d3-boxplot, d3-force {
+    max-width: 450px;
+  }
+}
