--- a/app.scss
+++ b/app.scss
@@ -11,6 +11,11 @@ svg {
   }
 }
 
+.flexbox {
+  display: flex;
+  align-content: space-between;
+}
+
 .mdl-layout__header-row {
   padding-left: 16px;
 }
