--- a/app.scss
+++ b/app.scss
@@ -11,11 +11,6 @@ svg {
   }
 }
 
-.flexbox {
-  display: flex;
-  align-content: space-between;
-}
-
 .mdl-layout__header-row {
   padding-left: 16px;
 }
@@ -31,18 +26,20 @@ svg {
 
 .page-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  div, d3-bar, d3-boxplot, d3-force {
-    max-width: 450px;
+  align-content: space-around;
+  height: auto;
+  margin-top: 10px;
+  div.limit {
+    max-width: 300px;
+  }
+  .item {
+    padding: 4px;
   }
 }
 
 d3-bar div {
-  width: 400px;
   text-align: left;
   .bar {
     background-color: #c5d4ff;
@@ -51,4 +48,29 @@ d3-bar div {
     color: black;
     white-space: nowrap;
   }
+}
+
+d3-range {
+  $w: 175px;
+  font-size: 0.8em;
+  width: $w;
+  div.chart {
+    width: $w - 10px;
+    display: block;
+    div {
+      height: 8px;
+      &.active {
+        background-color: #0eff03;
+        color: black;
+      }
+      &.inactive {
+        background-color: #4c7d47;
+        color: white;
+      }
+    }
+  }
+}
+
+d3-range, d3-bar, d3-force {
+  max-width: 350px;
 }
