--- a/app.scss
+++ b/app.scss
@@ -1,15 +1,3 @@
-svg {
-  .node {
-    stroke: black;
-    stroke-width: 1.5px;
-  }
-
-  .link {
-    stroke: black;
-    stroke-width: 1.5px;
-    fill: none;
-  }
-}
 
 .mdl-layout__header-row {
   padding-left: 16px;
@@ -22,21 +10,6 @@ svg {
   padding-top: 24px;
   margin-bottom: 0;
   z-index: 998;
-}
-
-.page-content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: space-around;
-  height: auto;
-  margin-top: 10px;
-  div.limit {
-    max-width: 300px;
-  }
-  .item {
-    padding: 4px;
-  }
 }
 
 d3-bar div {
@@ -71,6 +44,39 @@ d3-range {
   }
 }
 
-d3-range, d3-bar, d3-force {
+d3-range, d3-bar {
   max-width: 350px;
+}
+
+$leftColumnSize: 600px;
+#left {
+  width: $leftColumnSize;
+  float: left;
+  height: 100%;
+}
+
+#right {
+  margin-left: $leftColumnSize;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: space-around;
+  height: auto;
+  margin-top: 10px;
+  div.limit {
+    max-width: 300px;
+  }
+  .item {
+    padding: 4px;
+  }
+}
+
+.clear {
+  clear: both;
+}
+
+svg#d3_1 {
+  width: 100%;
+  height: 80vh;
+  min-height: 500px;
 }
