--- a/app.css
+++ b/app.css
@@ -1,6 +1,10 @@
 .mdl-layout__header-row {
   padding-left: 16px; }
 
+svg {
+  margin: 10px;
+}
+
 .mdl-button--floating-action {
   position: absolute;
   right: 24px;
